--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,8 @@
     },
     "scripts": {
         "tests-phpunit": "phpunit",
-        "tests-functional": "php ./tests/functional/run.php",
         "tests": [
-            "@tests-phpunit",
-            "@tests-functional"
+            "@tests-phpunit"
         ],
 
         "phpstan": "phpstan analyse ./src ./tests --level=max --no-progress -c phpstan.neon",
