--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ before_script:
 
 script:
   # run test job inside KBC
-  - skip 
-  #- docker run --rm -e KBC_STORAGE_TOKEN quay.io/keboola/syrup-cli:latest run-job $KBC_DEVELOPERPORTAL_APP $KBC_APP_TEST_CONFIG_ID test
+  - docker run --rm -e KBC_STORAGE_TOKEN quay.io/keboola/syrup-cli:latest run-job $KBC_DEVELOPERPORTAL_APP $KBC_APP_TEST_CONFIG_ID test
 
 deploy:
   provider: script
