fix: token permissions check fix: unnecessary row delete docs: clarify README tests: KBC_TEST_BUCKET is now used instead of hardcoded bucket name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,7 @@ services:
     volumes:
       - ./:/code
       - ./data:/data
+    environment:
+      - KBC_TEST_TOKEN
+      - KBC_TEST_URL
+      - KBC_TEST_BUCKET
