--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,3 +2,4 @@ parameters:
     ignoreErrors:
         - '#Calling method end\(\) on possibly null value of type Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface|null.#'
         - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface::scalarNode\(\)#'
+        - '#Method Keboola\\StorageWriter\\Tests\\AuthorizationTest::getClientMock\(\) should return Keboola\\StorageApi\\Client but returns PHPUnit\\Framework\\MockObject\\MockObject.#'
