chore: cs update

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,4 @@
 parameters:
     ignoreErrors:
-        - '#Calling method end\(\) on possibly null value of type Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface|null.#'
-        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface::scalarNode\(\)#'
+        - '#Cannot call method scalarNode\(\) on Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface|null.#'
         - '#Method Keboola\\StorageWriter\\Tests\\AuthorizationTest::getClientMock\(\) should return Keboola\\StorageApi\\Client but returns PHPUnit\\Framework\\MockObject\\MockObject.#'
