--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     },
     "require-dev": {
         "jakub-onderka/php-parallel-lint": "^1.0",
-        "keboola/coding-standard": "^4.0",
+        "keboola/coding-standard": "^6.0",
         "keboola/php-temp": "^1.0",
-        "phpstan/phpstan-shim": "^0.9.2",
+        "phpstan/phpstan-shim": "^0.10",
         "phpunit/phpunit": "^7.0",
-        "squizlabs/php_codesniffer": "~3.2",
+        "squizlabs/php_codesniffer": "^3.2",
         "symfony/process": "^4.0"
     },
     "autoload": {
