--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Storage API Writer",
     "type": "project",
     "require": {
-        "PHP": "^7.2",
+        "php": "^7.2",
         "keboola/php-component": "^5.0",
         "keboola/storage-api-client": "^10.21"
     },
@@ -14,8 +14,7 @@
         "keboola/php-temp": "^1.0",
         "phpstan/phpstan-shim": "^0.10",
         "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": "^3.2",
-        "symfony/process": "^4.0"
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
