--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "jakub-onderka/php-parallel-lint": "^1.0",
         "keboola/coding-standard": "^6.0",
         "keboola/php-temp": "^1.0",
-        "phpstan/phpstan-shim": "^0.10",
+        "phpstan/phpstan": "^0.12.57",
         "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.2"
     },
