--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "keboola/coding-standard": "^6.0",
         "keboola/php-temp": "^1.0",
         "phpstan/phpstan": "^0.12.57",
-        "phpunit/phpunit": "^9.4",
-        "squizlabs/php_codesniffer": "^3.2"
+        "phpunit/phpunit": "^9.4"
     },
     "autoload": {
         "psr-4": {
