migrate to GH Actions

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,7 @@ env:
   KBC_DEVELOPERPORTAL_PASSWORD: ${{ secrets.KBC_DEVELOPERPORTAL_PASSWORD }}
 
   # DockerHub login
-  DOCKERHUB_USER: "{{env(DOCKERHUB_USER)}}"
+  DOCKERHUB_USER: "keboolabot"
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   # KBC Settings
@@ -71,9 +71,9 @@ jobs:
       matrix:
         include:
           - KBC_TEST_URL: "https://connection.keboola.com/"
-            KBC_TEST_TOKEN: "${{ secrets.KBC_TEST_TOKEN_AWS }}"
+            KBC_TEST_TOKEN: KBC_TEST_TOKEN_AWS
           - KBC_TEST_URL: "https://connection.north-europe.azure.keboola.com/"
-            KBC_TEST_TOKEN: "${{ secrets.KBC_TEST_TOKEN_AZURE }}"
+            KBC_TEST_TOKEN: KBC_TEST_TOKEN_AZURE
 
     steps:
       -
@@ -94,7 +94,7 @@ jobs:
         name: Run tests
         run: |
           docker run \
-          -e KBC_TEST_TOKEN=${{ matrix.KBC_TEST_TOKEN }} \
+          -e KBC_TEST_TOKEN=${{ secrets[matrix.KBC_TEST_TOKEN] }} \
           -e KBC_TEST_URL=${{ matrix.KBC_TEST_URL }} \
           -e KBC_TEST_BUCKET \
           $APP_IMAGE composer ci
