--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "ext-json": "*",
         "keboola/csv": "^1.1",
         "keboola/php-component": "^9.0",
-        "keboola/storage-api-client": "^13.0",
-        "symfony/config": "^5.4"
+        "keboola/storage-api-client": "^14.2",
+        "symfony/config": "^5.4",
+        "symfony/finder": "^5.4"
     },
     "require-dev": {
         "keboola/coding-standard": "^13.0",
