--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - ./:/code
       - ./data:/data
     environment:
+      - KBC_TOKEN
       - KBC_TEST_TOKEN
+      - KBC_URL
       - KBC_TEST_URL
       - KBC_TEST_BUCKET
