Fix typos, etc.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -125,7 +125,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/') && needs.build.outputs.is_semantic_tag == 'true'
     steps:
       -
-        name: Set tag in the Deloper Portal
+        name: Set tag in the Developer Portal
         uses: keboola/action-set-tag-developer-portal@master
         with:
           vendor: ${{ env.KBC_DEVELOPERPORTAL_VENDOR }}
@@ -134,7 +134,7 @@ jobs:
           password: ${{ env.KBC_DEVELOPERPORTAL_PASSWORD }}
           tag: ${{ needs.build.outputs.app_image_tag }}
       -
-        name: Set tag in the Deloper Portal (Telemetry writer APP)
+        name: Set tag in the Developer Portal (Telemetry writer APP)
         uses: keboola/action-set-tag-developer-portal@master
         with:
           vendor: ${{ env.KBC_DEVELOPERPORTAL_VENDOR }}
